--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "multiplechain/bitcoin",
-    "version": "0.1.8",
+    "version": "0.1.9",
     "description": "Bitcoin PHP Provider",
     "type": "library",
     "license": "MIT",
@@ -13,7 +13,8 @@
         "php": ">=7.4",
         "phpseclib/phpseclib": "~2.0.11",
         "ext-mbstring": "*",
-        "multiplechain/utils": "^0.1.0"
+        "multiplechain/utils": "^0.1.0",
+        "beycanpress/http": "^0.1.4"
     },
     "autoload": {
         "psr-4": {
